# swanva

./: .gitignore  =2  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  va_engineering_report.md
alembic/: env.py
alembic/versions/: 19b432bf5f98_baseline_existing_schema.py  ad488aab5d08_create_initial_schema.py
db_scanner/: __init__.py
docs/: api_collection.md  va_engineering_report_v1.2.md
pscan/: __init__.py  engine.py  syn_scanner.py  tcp_scanner.py  utils.py
scanners/db_scanner/: README.md  pyproject.toml
scanners/network_scanner/pscan/: README.md  pyproject.toml
scanners/network_scanner/pscan/pscan/: cli.py  service_detection.py
scanners/os_scanner/: README.md  pyproject.toml
scanners/os_scanner/os_scanner/: __init__.py  scanner.py
scanners/os_scanner/os_scanner/collectors/: __init__.py  kernel.py  services.py  software.py
scanners/os_scanner/os_scanner/parsers/: __init__.py  dpkg_parser.py  rpm_parser.py
scanners/os_scanner/swa_os_scanner/: README.md  __init__.py  pyproject.toml  scanner.py  ssh.py  system_detector.py
scanners/os_scanner/swa_os_scanner/collectors/: __init__.py  cron.py  kernel.py  network.py  os_info.py  packages.py  permissions.py  services.py  software.py  sudo.py  users.py
scanners/os_scanner/swa_os_scanner/os_scanner/: system_detector.py
scanners/os_scanner/swa_os_scanner/os_scanner/collectors/: __init__.py  cron.py  network.py  os_info.py  packages.py  permissions.py  sudo.py  users.py
scanners/os_scanner/swa_os_scanner/parsers/: __init__.py
scanners/os_scanner/swan_os_scanner/: README.md  __init__.py  pyproject.toml  scanner.py  system_detector.py
scanners/os_scanner/swan_os_scanner/collectors/: __init__.py  cron.py  kernel.py  network.py  os_info.py  packages.py  permissions.py  services.py  software.py  sudo.py  users.py
scanners/os_scanner/swan_os_scanner/parsers/: __init__.py
scanners/pscan/: README.md
scanners/web_scanner/: README.md  pyproject.toml
scanners/web_scanner/web_scanner/: __init__.py  engine.py  models.py  normalizer.py  scanner.py
scanners/web_scanner/web_scanner/plugins/: __init__.py
scanners/web_scanner/web_scanner/plugins/nikto/: __init__.py  parser.py  plugin.py  runner.py
scanners/web_scanner/web_scanner/plugins/nuclei/: __init__.py  parser.py  plugin.py  runner.py
swanscan/: __init__.py  engine.py  service_detection.py  syn_scanner.py  tcp_scanner.py  udp_scanner.py  utils.py
va_manager/: .env  __init__.py  config.py  manager.py
va_manager/api/: deps.py  main.py  router.py
va_manager/auth/: __init__.py  context.py  rbac.py
va_manager/executor/: __init__.py  scan_executor.py
va_manager/middleware/: __init__.py  auth_middleware.py
va_manager/models/: __init__.py  asset.py  report.py  scan_job.py  scan_result.py  vulnerability.py
va_manager/queue/: __init__.py  job_queue.py
va_manager/security/: __init__.py  secrets.py
va_manager/services/: __init__.py  analytics_service.py  asset_service.py  connection_service.py  dashboard_service.py  identifiers.py  report_service.py  (+5 more)
web_scanner/: __init__.py
(+49 files in other folders)
