[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pscan"
version = "0.1.0"
description = "Advanced Python network scanner with TCP, SYN, UDP, and service detection modes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scapy",
]

[project.scripts]
pscan = "pscan.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pscan*", "os_scanner*", "web_scanner*", "db_scanner*"]
