[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swan-os-scanner"
version = "0.1.0"
description = "Swan OS credential scanner"
authors = [{name = "Swan"}]
requires-python = ">=3.9"
dependencies = [
    "paramiko"
]

[project.scripts]
swan-os-scanner = "swan_os_scanner.scanner:main"

[tool.setuptools]
packages = ["swan_os_scanner", "swan_os_scanner.collectors", "swan_os_scanner.parsers"]

[tool.setuptools.package-dir]
swan_os_scanner = "."
"swan_os_scanner.collectors" = "collectors"
"swan_os_scanner.parsers" = "parsers"
